--- a/data/contratos_selectivos/app.html
+++ b/data/contratos_selectivos/app.html
@@ -145,6 +145,13 @@
 														</div>
 													</div>
 												</div>
+
+												<button type="button" class="btn btn-sm btn-success btn-white btn-round" id="btn_cuotas">
+													<i class="ace-icon fa fa-globe bigger-125"></i>
+
+													Calcular
+													<i class="ace-icon fa fa-arrow-right icon-on-right bigger-125"></i>
+												</button>
 											</div>
 										</div>
 
