proceso de privilegios

--- a/data/privilegios/app.html
+++ b/data/privilegios/app.html
@@ -92,7 +92,7 @@
 															</div>
 
 															<div class="widget-body">
-																<div class="widget-main padding-8">
+																<div class="widget-main padding-8" id="element_tree">
 																	<ul id="tree1"></ul>
 																</div>
 															</div>
