--- a/data/contratos_selectivos/app.html
+++ b/data/contratos_selectivos/app.html
@@ -278,10 +278,9 @@
 								<tr>
 									<th>TIPO CONTRATO</th>
 									<th>CÓDIGO</th>
-									<th>IDENTIFICACIÓN</th>
+									<th>RUC</th>
 									<th>CLIENTE</th>
-									<th>PAQUETE</th>
-									<th>FINALIZACIÓN</th>
+									<th>FINALIZA</th>
 									<th>ESTADO</th>
 									<th>ACCIÓN</th>
 								</tr>
