--- a/data/ficha_ingresos/app.html
+++ b/data/ficha_ingresos/app.html
@@ -713,7 +713,7 @@
 																	<label class="control-label col-xs-12 col-sm-4 no-padding-right">Abreviatura Rol:</label>
 																	<div class="col-xs-12 col-sm-6">
 																		<div class="input-group">
-																			<input type="text" id="abreviatura" name="abreviatura" class="form-control" onKeyUp="this.value = this.value.toUpperCase();" />
+																			<input type="text" id="abreviatura" name="abreviatura" class="form-control" onKeyUp="this.value = this.value.toUpperCase();" maxlength="2" />
 																		</div>
 																	</div>
 																</div>	
