--- a/data/rol_pagos/app.html
+++ b/data/rol_pagos/app.html
@@ -376,7 +376,7 @@
 									<div class="row">
 										&nbsp; &nbsp;
 										<div class="col-sm-12">
-											<div class="col-sm-4">
+											<div class="col-sm-3">
 												<div class="form-group">
 													<label class="col-sm-4 control-label no-padding-right" for="select_empleado1">EMPLEADO:</label>
 													<div class="col-sm-8">
@@ -423,6 +423,12 @@
 											<div class="col-sm-1">
 												<div class="form-group">
 													<button class="btn btn-purple btn-sm blue" id="btn_limpiar" name="btn_limpiar" type="button"><i class="ace-icon fa fa-search-plus"></i> LIMPIAR</button>
+												</div>
+											</div>
+
+											<div class="col-sm-1">
+												<div class="form-group">
+													<button class="btn btn-purple btn-sm blue" id="btn_excel" name="btn_excel" type="button"><i class="ace-icon fa fa-file-excel-o"></i> EXCEL</button>
 												</div>
 											</div>
 										</div>
