--- a/data/vendedores/app.html
+++ b/data/vendedores/app.html
@@ -12,7 +12,7 @@
 				</li>
 
 				<li class="active">Ingesos</li>
-				<li class="active">Clientes</li>
+				<li class="active">Asignación</li>
 			</ul><!-- /.breadcrumb -->
 
 			<div class="nav-search" id="nav-search">
@@ -29,7 +29,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="space"></div>
-					<form class="form-horizontal" name="form_clientes" id="form_clientes">
+					<form class="form-horizontal" name="form_vendedores" id="form_vendedores">
 						<div class="tabbable">
 							<ul class="nav nav-tabs padding-16">
 								<li class="active">
@@ -42,149 +42,61 @@
 
 							<div class="tab-content profile-edit-tab-content">
 								<div id="edit-basic" class="tab-pane in active">
-									<h4 class="header blue bolder smaller">General</h4>
-
+								&nbsp;
 									<div class="row">
 										<div class="col-sm-12">
-											<div class="col-xs-12 col-sm-4 center">
-												<div>
-													<span class="profile-picture">
-														<img id="avatar" class="editable img-responsive" alt="Alex's Avatar" src="dist/avatars/profile-pic.jpg" />
-													</span>
+											<div class="col-xs-12 col-sm-4">											
+												<div class="form-group">
+													<label class="control-label col-sm-4 no-padding-right">Código Vendedor:</label>
+													<div class="col-sm-7">
+														<div class="clearfix">
+															<input type="text" name="codigo" id="codigo" placeholder="Código Vendedor" class="form-control" onkeyup="this.value = this.value.toUpperCase();" />
+														</div>
+													</div>
+												</div>
 
-													<div class="space-4"></div>
+												<div class="form-group">
+													<label class="col-sm-4 control-label no-padding-right" for="select_tipo_vendedor">Tipo Vendedor:</label>
+													<div class="col-sm-7">
+														<select id="select_tipo_vendedor" name="select_tipo_vendedor" class="select2" data-placeholder="Tipo Venddor...">
+															<option value="">&nbsp;</option>
+														</select>
+													</div>
+												</div>	
+											</div>
 
-													<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
-														<div class="inline position-relative">
-															<span class="white">Logo</span>
+											<div class="col-xs-12 col-sm-4">	
+												<div class="form-group">
+													<label class="control-label col-sm-4 no-padding-right">Identificación:</label>
+													<div class="col-sm-7">
+														<div class="clearfix">
+															<input type="text" name="identificacion" id="identificacion" placeholder="Buscar...." class="form-control" />
+															<input type="hidden" name="id_personal" id="id_personal" class="form-control" />
+														</div>
+													</div>
+												</div>
+
+												<div class="form-group">
+													<label class="control-label col-sm-4 no-padding-right">Observaciones:</label>
+													<div class="col-sm-7">
+														<div class="clearfix">
+															<textarea name="observaciones" id="observaciones" class="form-control"></textarea>
 														</div>
 													</div>
 												</div>
 											</div>
 
-											<div class="col-sm-8">
+											<div class="col-sm-4">
 												<div class="form-group">
-													<label class="col-sm-4 control-label no-padding-right" for="nombre_empresa">Empresa:</label>
-
+													<label class="control-label col-sm-4 no-padding-right">Nombres:</label>
 													<div class="col-sm-8">
-														<input type="text" name="nombre_empresa" id="nombre_empresa" placeholder="Nombre empresa" value="" class="col-xs-12 col-sm-10"/>
-														<input type="hidden" name="id_empresa" id="id_empresa" placeholder="" value="" class=""/>
-													</div>
-												</div>
-
-												<div class="form-group">
-													<label class="col-sm-4 control-label no-padding-right" for="ruc_empresa">Ruc:</label>
-
-													<div class="col-sm-8">
-														<input type="text" name="ruc_empresa" id="ruc_empresa" placeholder="Ruc empresa" value="" class="col-xs-12 col-sm-5" maxlength="13" />
-													</div>
-												</div>
-
-												<div class="form-group">
-													<label class="col-sm-4 control-label no-padding-right" for="direccion_empresa">Dirección:</label>
-
-													<div class="col-sm-8">
-														<input type="text" name="direccion_empresa" id="direccion_empresa" placeholder="Dirección empresa" value="" class="col-xs-12 col-sm-10" />
-													</div>
-												</div>
-
-												<div class="form-group">
-													<label class="col-sm-4 control-label no-padding-right" for="txt_contacto">Contacto:</label>
-
-													<div class="col-sm-8">
-														<input type="text" name="txt_contacto" id="txt_contacto" placeholder="Contacto empresa" value="" class="col-xs-12 col-sm-10" />
-													</div>
-												</div>
-
-												<div class="form-group">
-													<label class="col-sm-4 control-label no-padding-right" for="observaciones">Observaciones:</label>
-
-													<div class="col-sm-8">
-														<textarea name="observaciones" id="observaciones" class="col-xs-12 col-sm-10"></textarea>
+														<div class="clearfix">
+															<input type="text" name="personal" id="personal" placeholder="Buscar...." class="form-control" onkeyup="this.value = this.value.toUpperCase();" />
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>	
-									</div>
-
-									<div class="space"></div>
-									<h4 class="header blue bolder smaller">Contactos</h4>
-
-									<div class="form-group">
-										<label class="col-sm-2 control-label no-padding-right" for="correo">E-mail:</label>
-
-										<div class="col-sm-10">
-											<span class="input-icon input-icon-right">
-												<input type="email" name="correo" id="correo" value="" />
-												<i class="ace-icon fa fa-envelope"></i>
-											</span>
-										</div>
-									</div>
-
-									<div class="space-4"></div>
-
-									<div class="form-group">
-										<label class="col-sm-2 control-label no-padding-right" for="form-field-website">Sitio Web:</label>
-
-										<div class="col-sm-10">
-											<span class="input-icon input-icon-right">
-												<input type="url" name="txt_sitio_web" id="txt_sitio_web" value="" />
-												<i class="ace-icon fa fa-globe"></i>
-											</span>
-										</div>
-									</div>
-
-									<div class="space-4"></div>
-
-									<div class="form-group">
-										<label class="col-sm-2 control-label no-padding-right" for="form-field-phone">Teléfonos:</label>
-
-										<div class="col-sm-10">
-											<span class="input-icon input-icon-right">
-												<input type="text" name="txt_telefono" id="txt_telefono" class="input-medium input-mask-phone"/>
-												<i class="ace-icon fa fa-phone fa-flip-horizontal"></i>
-											</span>
-										</div>
-									</div>
-
-									<div class="space"></div>
-									<h4 class="header blue bolder smaller">Redes Sociales</h4>
-
-									<div class="form-group">
-										<label class="col-sm-2 control-label no-padding-right" for="txt_facebook">Facebook</label>
-
-										<div class="col-sm-10">
-											<span class="input-icon">
-												<input type="text" name="txt_facebook" id="txt_facebook" value=""/>
-												<i class="ace-icon fa fa-facebook blue"></i>
-											</span>
-										</div>
-									</div>
-
-									<div class="space-4"></div>
-
-									<div class="form-group">
-										<label class="col-sm-2 control-label no-padding-right" for="txt_twitter">Twitter</label>
-
-										<div class="col-sm-10">
-											<span class="input-icon">
-												<input type="text" name="txt_twitter" id="txt_twitter" value=""/>
-												<i class="ace-icon fa fa-twitter light-blue"></i>
-											</span>
-										</div>
-									</div>
-
-									<div class="space-4"></div>
-
-									<div class="form-group">
-										<label class="col-sm-2 control-label no-padding-right" for="txt_google">Google+</label>
-
-										<div class="col-sm-10">
-											<span class="input-icon">
-												<input type="text" name="txt_google" id="txt_google" value=""/>
-												<i class="ace-icon fa fa-google-plus red"></i>
-											</span>
-										</div>
 									</div>
 								</div>
 							</div>
@@ -198,47 +110,107 @@
 								</button>
 
 								&nbsp; &nbsp;
-								<button class="btn btn-success" type="button" name="btn_3" id="btn_3">
-									<i class="ace-icon fa fa-pencil-square-o bigger-110"></i>
-									Modificar
-								</button>
-
-								&nbsp; &nbsp;
-								<button class="btn btn-success" type="button" name="btn_2" id="btn_2" data-toggle="modal" href="#myModal">
+								<button class="btn btn-success" type="button" name="btn_1" id="btn_1" data-toggle="modal" href="#myModal">
 									<i class="ace-icon fa fa-search bigger-110"></i>
 									Buscar
 								</button>
 
 								&nbsp; &nbsp;
-								<button class="btn btn-success" type="button" name="btn_1" id="btn_1">
+								<button class="btn btn-success" type="button" name="btn_2" id="btn_2">
+									<i class="ace-icon fa fa-pencil-square-o bigger-110"></i>
+									Modificar
+								</button>
+
+								&nbsp; &nbsp;
+								<button class="btn btn-success" type="button" name="btn_3" id="btn_3">
 									<i class="ace-icon fa fa-refresh bigger-110"></i>
 									Actualizar
 								</button>
 							</div>
 						</div>
 					</form>
-					<!-- PAGE CONTENT BEGINS -->
-					<!--  -->
-				</div><!-- /.col -->
-			</div><!-- /.row -->
-		</div><!-- /.page-content -->
+				</div>
+			</div>
+		</div>
 	</div>
-</div>	
+</div>
 
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" id="myModal">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">BUSCAR CLIENTES</h4>
+          <h4 class="modal-title">BUSCAR VENDEDORES</h4>
         </div>
         <div class="modal-body">
-            <table id="table"></table>
-			<div id="pager"></div>
+        	<div class="row">
+				<div class="col-xs-12">
+					<div class="table-header">
+						Resultados para Vendedores
+					</div>
+
+					<div>
+						<table id="dynamic-table" class="table table-striped table-bordered table-hover">
+							<thead>
+								<tr>
+									<th>IDENTIFICACIÓN</th>
+									<th>NOMBRES COMPLETOS</th>
+									<th>TIPO VENDEDOR</th>
+									<th>EDITAR</th>
+									<th>FIRMA DIGITAL</th>
+								</tr>
+							</thead>
+							<tbody>
+								
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-success" data-dismiss="modal">Cerrar</button>
         </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+      </div>
+    </div>
+</div>
+
+<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="myModal2">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="table-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+				<span class="white">&times;</span>
+			</button>
+			Vendedores
+		</div>
+        <br />
+        <form class="form-horizontal" name="form_imagen" id="form_imagen">
+        	<input type="hidden" name="id_vendedor" id="id_vendedor"class="form-control" />
+        	<div class="row center">
+		        <span class="profile-picture">
+					<img id="avatar" class="editable img-responsive" alt="" />
+				</span>
+				<div class="space-4"></div>
+				<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
+					<div class="inline position-relative">
+						<span class="white">Imagen Firma</span>
+					</div>
+				</div>
+			</div>
+        </form>
+	        
+		<br />
+        <div class="modal-footer no-margin-top">
+			<button class="btn btn-sm btn-danger pull-left" data-dismiss="modal" data-toggle="tooltip" title="Cerrar ventana">
+				<i class="ace-icon fa fa-times"></i>
+				Cerrar
+			</button>
+			<button name="btn_guardar_imagen" id="btn_guardar_imagen" class="btn btn-sm btn-success pull-right" data-toggle="tooltip" title="Guardar imagen">
+				<i class="ace-icon fa fa-check"></i>
+				Guardar
+			</button>
+		</div>
+      </div>
+    </div>
+</div>	
