--- a/data/facturas/app.html
+++ b/data/facturas/app.html
@@ -131,7 +131,7 @@
 
 										<div class="col-sm-12">
 											<h3 class="header smaller lighter green">Detalle Factura</h3>
-											<!-- <div class="row">
+											<div class="row">
 												<div class="col-sm-9">
 													<div class="col-xs-3">
 														<div class="row">
@@ -181,7 +181,7 @@
 														</div>
 														<div class="row">
 															<div class="col-xs-12">
-																<input type="text" id="precio" name="precio" class="form-control" data-toggle="tooltip" readonly /> 
+																<input type="text" id="precio" name="precio" class="form-control" data-toggle="tooltip" /> 
 															</div>
 														</div>
 													</div>
@@ -193,12 +193,12 @@
 														</div>
 														<div class="row">
 															<div class="col-xs-12">
-																<input type="text" id="descuento" name="descuento"  class="form-control" data-toggle="tooltip" readonly /> 
+																<input type="text" id="descuento" name="descuento"  class="form-control" data-toggle="tooltip" /> 
 															</div>
 														</div>
 													</div>
 												</div>	
-											</div> -->
+											</div>
 											
 											&nbsp; &nbsp;
 											
